Improve adaptive progress and rainfall presets
